Final release 263.8.0 (branch 263.x)

--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -243,6 +243,10 @@ builds:
     version: 99e1cad56b3cf7253a22f4785442558523d07130
     blobstore_id: 86d3270d-8fc3-4ad3-709e-548cb7e139cb
     sha1: 768362b7c38c198c05312b84daeb5ab882f3638d
+  9b764dffd9acd94044f8b571f5c1975eaae64b1d:
+    version: 9b764dffd9acd94044f8b571f5c1975eaae64b1d
+    blobstore_id: bad81c3a-f7da-435e-79eb-c749baac8c3b
+    sha1: 56d3a66ff51f838dbef5550a1aa4948dd24a34a5
   9b93385af4e3191db346478415306cf7d4caef0c:
     version: 9b93385af4e3191db346478415306cf7d4caef0c
     blobstore_id: 9a171e4f-afcf-432d-94d5-3270ff2e8a59
