--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -163,6 +163,10 @@ builds:
     version: 279528f58ad73168ec0eac5564b9c63b6de8cd0a
     blobstore_id: e9ee4bd9-4b46-46a3-b3ff-04c90adbb70e
     sha1: 6c67ceb513c591ba31b4825e9424ff95514c06a6
+  27be1d5ce1d65754b32e9e359c38c94793ae8b5e:
+    version: 27be1d5ce1d65754b32e9e359c38c94793ae8b5e
+    blobstore_id: 6b5a273b-19f2-4f65-7b97-6845e037d1d5
+    sha1: 729a5a578a24abafaddae9a940c5e21a79418f7e
   27fb1882f5e591c7e416d15b36b919ab57389c5c:
     version: 27fb1882f5e591c7e416d15b36b919ab57389c5c
     blobstore_id: dfb5ff52-333b-4d0e-9d3a-4fec8db78216
