--- a/releases/index.yml
+++ b/releases/index.yml
@@ -75,6 +75,8 @@ builds:
     version: "147"
   25453110-2f68-490b-ac11-821d518379e0:
     version: "95"
+  256e9ece-7957-44c1-6ca8-60fdb020fda1:
+    version: 263.8.0
   26869a72-c9e8-40e0-a2cb-55409340c54c:
     version: "112"
   274cbf9640a23e5287c692bc44f7e155545e199e:
