--- a/releases/index.yml
+++ b/releases/index.yml
@@ -621,6 +621,8 @@ builds:
     version: "193"
   ee8cc10b-5240-4ef0-61cd-e4a8841a0ac9:
     version: "260.3"
+  eef873e0-11e5-4c08-679c-e96c83a548b5:
+    version: 263.9.0
   f13ab9e2-caab-4f76-6659-248b038bd3ca:
     version: 263.4.0
   f3adf894ee76ef6f5c0f7591abb63eaccf06eeea:
