Use ruby yaml marshaller for BPM configuration
This change converts the templates for BPM configuration to use
`YAML.Dump`. By using the built in marshaller, we can be certain that
properties that are templated will be escaped properly.

[#154777462](https://www.pivotaltracker.com/story/show/154777462)

--- a/jobs/blobstore/templates/bpm.yml
+++ b/jobs/blobstore/templates/bpm.yml
@@ -1,9 +1,17 @@
----
-processes:
-- name: blobstore
-  executable: /var/vcap/packages/nginx/sbin/nginx
-  persistent_disk: true
-  ephemeral_disk: true
-  args:
-  - -c
-  - /var/vcap/jobs/blobstore/config/nginx.conf
+<%=
+
+blobstore_config = {
+  "name" => "blobstore",
+  "executable" => "/var/vcap/packages/nginx/sbin/nginx",
+  "args" => ["-c", "/var/vcap/jobs/blobstore/config/nginx.conf"],
+  "persistent_disk" => true,
+  "ephemeral_disk" => true,
+}
+
+config = {
+  "processes" => [blobstore_config],
+}
+
+YAML.dump(config)
+
+%>
