--- a/jobs/registry/templates/bpm.yml
+++ b/jobs/registry/templates/bpm.yml
@@ -1,20 +1,33 @@
----
-processes:
-- name: registry
-  executable: /var/vcap/jobs/registry/bin/registry
+<%=
 
-  env:
-    <% if_p('env.http_proxy') do |http_proxy| %>
-    HTTP_PROXY: <%= http_proxy %>
-    http_proxy: <%= http_proxy %>
-    <% end %>
-    <% if_p('env.https_proxy') do |https_proxy| %>
-    HTTPS_PROXY: <%= https_proxy %>
-    https_proxy: <%= https_proxy %>
-    <% end %>
-    <% if_p('env.no_proxy') do |no_proxy| %>
-    NO_PROXY: <%= no_proxy %>
-    no_proxy: <%= no_proxy %>
-    <% end %>
-    BUNDLE_GEMFILE: /var/vcap/packages/registry/Gemfile
-    GEM_HOME: /var/vcap/packages/registry/gem_home/ruby/2.4.0
+registry_config = {
+  "name" => "registry",
+  "executable" => "/var/vcap/jobs/registry/bin/registry",
+  "env" => {
+    "BUNDLE_GEMFILE" => "/var/vcap/packages/registry/Gemfile",
+    "GEM_HOME" => "/var/vcap/packages/registry/gem_home/ruby/2.4.0",
+  },
+}
+
+if_p('env.http_proxy') do |http_proxy|
+  registry_config["env"]["HTTP_PROXY"] = http_proxy
+  registry_config["env"]["http_proxy"] = http_proxy
+end
+
+if_p('env.https_proxy') do |https_proxy|
+  registry_config["env"]["HTTPS_PROXY"] = https_proxy
+  registry_config["env"]["https_proxy"] = https_proxy
+end
+
+if_p('env.no_proxy') do |no_proxy|
+  registry_config["env"]["NO_PROXY"] = no_proxy
+  registry_config["env"]["no_proxy"] = no_proxy
+end
+
+config = {
+  "processes" => [registry_config],
+}
+
+YAML.dump(config)
+
+%>
