Add passed constraints to candidate-release
- add missing DEFAULT_UPDATE_STRATEGY default task parameter

[#155019024](https://www.pivotaltracker.com/story/show/155019024)

Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -812,12 +812,16 @@ jobs:
       - unit-2.4
       - unit-2.4-mysql
       - unit-2.4-postgres
+      - unit-2.4-db-migrations-rds
       - integration-mysql-gocli-sha1
       - integration-postgres-gocli-sha2
       - blobstore-client-integration
       - fuzz-tests
       - upgrade-tests
       - blobstore-performance
+      - integration-db-tls-mysql
+      - integration-db-tls-postgres
+      - integration-db-tls-postgres-hotswap
     - get: bosh-cli
     - get: candidate-version
       params:
