--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -15,11 +15,12 @@ run:
   path: bosh-src/ci/tasks/test-integration-gocli.sh
 
 params:
-  RUBY_VERSION:      replace-me
-  DB:                replace-me
-  LOG_LEVEL:         ERROR
-  NUM_GROUPS:        8
-  GROUP:             1,2,3,4,5,6,7,8
-  SPEC_PATH:         ~
-  SHA2_MODE:         ~
-  DB_TLS:            false
+  RUBY_VERSION:            replace-me
+  DB:                      replace-me
+  LOG_LEVEL:               ERROR
+  NUM_GROUPS:              8
+  GROUP:                   1,2,3,4,5,6,7,8
+  SPEC_PATH:               ~
+  SHA2_MODE:               ~
+  DB_TLS:                  false
+  DEFAULT_UPDATE_STRATEGY: "in-place-replace-vm"
