Rename vm update strategies
This change updates the vm update strategies from `in-place-replace-vm`
and `duplicate-and-replace-vm` to `delete-create` and
`create-swap-delete` respectively. This change also adds a migration to
migrate the original values of `legacy` and `hot-swap` to the new
updated values. This allows users to update from the latest release.

[#156179748](https://www.pivotaltracker.com/story/show/156179748)
[#155538653](https://www.pivotaltracker.com/story/show/155538653)

Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -23,4 +23,4 @@ params:
   SPEC_PATH:               ~
   SHA2_MODE:               ~
   DB_TLS:                  false
-  DEFAULT_UPDATE_STRATEGY: "in-place-replace-vm"
+  DEFAULT_UPDATE_STRATEGY: "delete-create"
