Allow scheduler to use persistent-disks
Also fix delete orphaned vms schedule to be 5m instead of 5s.

[#139870697](https://www.pivotaltracker.com/story/show/139870697)

Co-authored-by: Luan Santos <lsantos@pivotal.io>

--- a/jobs/director/templates/bpm.yml
+++ b/jobs/director/templates/bpm.yml
@@ -24,6 +24,7 @@ scheduler_config = {
   "name" => "scheduler",
   "executable" => "/var/vcap/jobs/director/bin/scheduler",
   "ephemeral_disk" => true,
+  "persistent_disk" => true,
 }
 
 sync_dns_config = {
