--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -15,7 +15,7 @@ run:
   path: bosh-src/ci/tasks/test-integration-gocli.sh
 
 params:
-  RUBY_VERSION:            replace-me
+  RUBY_VERSION:            2.4.4
   DB:                      replace-me
   LOG_LEVEL:               ERROR
   NUM_GROUPS:              8
