--- a/ci/tasks/test-unit.yml
+++ b/ci/tasks/test-unit.yml
@@ -13,6 +13,6 @@ run:
   path: bosh-src/ci/tasks/test-unit.sh
 
 params:
-  RUBY_VERSION: replace-me
+  RUBY_VERSION: 2.4.4
   DB:           replace-me
   DB_VERSION:   replace-me
