--- a/ci/tasks/test-upgrade.yml
+++ b/ci/tasks/test-upgrade.yml
@@ -15,6 +15,6 @@ run:
   path: bosh-src/ci/tasks/test-upgrade.sh
 
 params:
-  RUBY_VERSION:      replace-me
+  RUBY_VERSION:      2.4.4
   DB:                replace-me
   LOG_LEVEL:         ERROR
