Add bosh-src as output for integration time record
[#156865602](https://www.pivotaltracker.com/story/show/156865602)

--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -11,6 +11,9 @@ inputs:
 - name: bosh-cli
 - name: bosh-agent
 
+inputs:
+- name: bosh-src
+
 run:
   path: bosh-src/ci/tasks/test-integration-gocli.sh
 
