Make specific output for parallel-runtime-log
[#156865602](https://www.pivotaltracker.com/story/show/156865602)

--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -12,7 +12,7 @@ inputs:
 - name: bosh-agent
 
 outputs:
-- name: bosh-src
+- name: parallel-runtime-log
 
 run:
   path: bosh-src/ci/tasks/test-integration-gocli.sh
