Take in integration-tests-parallel-runtime as input to integrations
[#156865602](https://www.pivotaltracker.com/story/show/156865602)

Co-authored-by: Michael Xu <mxu@pivotal.io>

--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -10,6 +10,7 @@ inputs:
 - name: bosh-src
 - name: bosh-cli
 - name: bosh-agent
+- name: integration-tests-parallel-runtime
 
 outputs:
 - name: parallel-runtime-log
