Fix extra argument for interpolate ops file
Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -56,7 +56,7 @@ shared:
       BOSH_VSPHERE_VCENTER_DISK_PATH:       {{vcenter-disk-path}}
       BOSH_VSPHERE_VCENTER_RP:              {{vcenter-rp}}
       DEPLOY_ARGS: |
-        -o bosh-deployment/vsphere/resource-pool.yml \
+        -o bosh-deployment/vsphere/resource-pool.yml
 
   - &prepare-bats-config
     task: prepare-bats
